--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@sentry/nextjs": "^7.105.0",
-    "@tabler/icons-react": "^3.1.0",
+    "@tabler/icons-react": "^3.5.0",
     "@types/three": "^0.163.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
