--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.5.0",
     "@types/three": "^0.163.0",
     "@vercel/analytics": "^1.3.1",
